--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "firebase": "^9.9.2",
     "react": "^17.0.2",
     "react-chat-engine": "^1.11.22",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
