--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
     "firebase": "^9.9.2",
+    "firebase-admin": "^11.0.1",
+    "firebase-functions": "^3.22.0",
     "react": "^17.0.2",
     "react-chat-engine": "^1.11.22",
     "react-dom": "^17.0.2",
